# TrytonCDST

./: .flake8  .gitignore  .isort.cfg  .~lock.bank_payments_bancolombia_sap.fods#  Productos.py  README.md  __init__.py  access.py  account.py  account.xml  account_dunning.py  additional.py  bank_payments_bancolombia_sap.fods  builder_phase.py  builder_phase2.py  collection.py  company.py  conector.py  conector.xml  conector_log.py  conexion.py  configuration.py  configuration.xml  contract.py  cron.py  cron.xml  currency.py  electronic_payroll_wizard.py  email_.py  exceptions.py  exogena.py  fixes.py  install_modules.sh  invoice.py  it_supplier_noova.py  line.py  liquidation.py  loan.py  loan.xml  loan_format_report.odt  (+38 more)
account_bank_statement_cdst/: README.rst  __init__.py  bank.py  bank.xml  setup.cfg  setup.py  statement.py  statement.xml  tryton.cfg
account_cdst/: README.rst  __init__.py  account.py  account.xml  analytic_report_vertical.fodt  auxiliary_book.fodt  configuration.py  configuration.xml  payment_bank.py  payment_bank.xml  setup.cfg  setup.py  tryton.cfg
account_invoice_cdst/: README.rst  __init__.py  setup.cfg  (+4 more)
report_cdst/: README.rst  __init__.py  payroll_export_report.fodt  report.py  report.xml  setup.cfg  setup.py  tryton.cfg
report_cdst/doc/: conf.py  configuration.rst  design.rst  index.rst  reference.rst  releases.rst  setup.rst  usage.rst
report_cdst/tests/: __init__.py  scenario_report_cdst.rst  scenario_report_cdst_activate.rst  test_module.py  test_report_cdst.py  test_scenario.py
report_cdst/view/: example_form.xml  example_tree.xml
(+693 files in other folders)
