[metadata]
; name will be filled by trytoncommunity-setuptools
description   = Módulo de reporte CDST
long_description = file: README.rst
long_description_content_type = text/x-rst
url           = https://tryton.community/
author        = Tryton Community
author_email  = 
license       = GPL-3.0-or-later
license_files = COPYRIGHT, LICENSE-GPL-3.0.txt, LICENSE-FDL-1.3.txt,
                icons/LICENSE-Apache-2.0.txt
keywords      = 
classifiers =
;; Standard classifiers will be added by trytoncommunity-setuptools,
;; according to Tryton version
   Development Status :: 5 - Production/Stable
;  Intended Audience :: Financial and Insurance Industry
;  Intended Audience :: Legal Industry
  License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
  Natural Language :: English

[options]
; python_requires = … filled by trytoncommunity-setuptools
install_requires =
;; add any required Tryton or Python packages here